src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.btn-add-tracker {
  margin-bottom: 50px;
}

.trackers-group {
  margin-top: 50px;
}

.tracker-group {
  margin-top: 50px;
}

.footer {
  height: 100px;
}

.color-dot {
  height: 25px;
  width: 25px;
  background-color: #bbb;
  border: 2px solid black;
  border-radius: 50%;
  cursor: pointer;
  display: inline-block;
}

.night-mode {
  background-color: gray;
}

#delete-mode-btn {
  font-weight: 600;
}

#single-tracker-value {
  font-size: 150px;
  font-weight: 200;
  margin-bottom: 50px;
}

#single-tracker-name {
  font-size: 75px;
  font-weight: 200;
  margin-bottom: 50px;
}

#single-tracker-btn-add {
  font-size: 20px;
  height: 70px;
  width: 200px;
}

#single-tracker-btn-inc {
  font-size: 25px;
  height: 70px;
  width: 50px;
}

